// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiLoadingKibana is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiLoadingKibana ouiLoadingKibana--medium testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="ouiLoadingKibana__icon"
  >
    <span
      data-ouiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`OuiLoadingKibana size l is rendered 1`] = `
<span
  class="ouiLoadingKibana ouiLoadingKibana--large"
>
  <span
    class="ouiLoadingKibana__icon"
  >
    <span
      data-ouiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`OuiLoadingKibana size m is rendered 1`] = `
<span
  class="ouiLoadingKibana ouiLoadingKibana--medium"
>
  <span
    class="ouiLoadingKibana__icon"
  >
    <span
      data-ouiicon-type="logoKibana"
    />
  </span>
</span>
`;

exports[`OuiLoadingKibana size xl is rendered 1`] = `
<span
  class="ouiLoadingKibana ouiLoadingKibana--xLarge"
>
  <span
    class="ouiLoadingKibana__icon"
  >
    <span
      data-ouiicon-type="logoKibana"
    />
  </span>
</span>
`;
